--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Recent Articles
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=/post/my-first-post/ class="color-inherit dim link">
-My First Post
+Welcome to our new webpage!
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
