--- a/about/index.html
+++ b/about/index.html
@@ -1,91 +1,128 @@
-<!doctype html><html lang=en-us>
+<!doctype html><html lang=ja>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K69Z84DP1Y"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-K69Z84DP1Y')</script>
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>About | Temperate Designs</title>
-<meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simply Designed Apps">
-<meta name=generator content="Hugo 0.88.1">
-<meta name=ROBOTS content="INDEX, FOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<link href=/about/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/about/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="About">
-<meta property="og:description" content="Simply Designed Apps">
+<title>Temperate Designs | About</title>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=icon href=/favicon-32x32.png>
+<link href=/css/fa5.min.css rel=stylesheet type=text/css>
+<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.636d88a6d306f32eeb32b1fd7d56d5e4c4f6c42def1224a8736bbd07eba742a5.css" integrity="sha256-Y22IptMG8y7rMrH9fVbV5MT2xC3vEiSoc2u9B+unQqU=">
+<link href=/css/style.min.css rel=stylesheet type=text/css>
+<link rel=stylesheet href=/css/custom.css>
+<meta property="og:site_name" content="Temperate Designs">
+<meta property="og:title" content="About | Temperate Designs">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://temperate-designs.github.io/about/">
-<meta itemprop=name content="About">
-<meta itemprop=description content="Simply Designed Apps"><meta name=twitter:card content="summary">
-<meta name=twitter:title content="About">
-<meta name=twitter:description content="Simply Designed Apps">
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<meta property="og:locale" content="ja_JP">
+<meta name=twitter:card content="summary_large_image">
+<meta property="twitter:title" content="About">
+<meta property="og:image" content="https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg">
+<meta property="og:image:url" content="https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg">
+<meta property="og:description" content="Simply Designed Apps">
+<meta property="twitter:description" content="Simply Designed Apps">
 </head>
-<body class="ma0 avenir bg-near-white production">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
-<nav class="pv3 ph3 ph4-ns" role=navigation>
-<div class="flex-l justify-between items-center center">
-<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-<img src=/temperate-designs-logo.png class="w100 mw5-ns" alt="Temperate Designs">
-</a>
-<div class="flex-l items-center">
-<ul class="pl0 mr3">
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/about/ title="About page">
-About
+<body class="flex flex-col min-h-screen">
+<main class=flex-grow><header>
+<div id=overlay>
+<ul class="text-center list-none text-white text-3xl">
+<li class=p-2>
+<a href=/products/>
+<span>Products</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/contact/ title="Contact page">
-Contact
+<li class=p-2>
+<a href=/about/>
+<span>About</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
-Sunflower Dash
+<li class=p-2>
+<a href=/contact/>
+<span>Contact</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/ title="Temperate Designs page">
-Temperate Designs
+<li class=p-2>
+<a href=/sunflower-dash/>
+<span>Sunflower Dash</span>
+</a>
+</li>
+<li class=p-2>
+<a href=/>
+<span>Temperate Designs</span>
 </a>
 </li>
 </ul>
-<a href=https://github.com/Temperate-Designs target=_blank class="link-transition github link dib z-999 pt3 pt0-l mr1" title="Github link" rel=noopener aria-label="follow on Github——Opens in a new window"><svg height="32" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" width="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
+</div>
+<nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
+<div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
+<a href=https://temperate-designs.github.io><img alt="Temperate Designs Logo" class="h-14 mr-3" src=/temperate-designs-logo.png></a>
+</div>
+<div class="block lg:hidden">
+<div id=hamburgerbtn class="flex cursor-pointer items-center w-14 h-10 py-2 rounded mopen">
+<span class=top></span>
+<span class=middle></span>
+<span class=bottom></span>
+</div>
+</div>
+<div class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto" id=mobileMenu>
+<div class="text-lg lg:flex-grow">
+</div>
+<div class=text-lg>
+<a href=/products/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Products
+</a>
+<a href=/about/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+About
+</a>
+<a href=/contact/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Contact
+</a>
+<a href=/sunflower-dash/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Sunflower Dash
+</a>
+<a href=/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Temperate Designs
+</a>
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-About
-</h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-Simply Designed Apps
-</h2>
+</header><div class="scroll-top rounded-full">
+<span class="icon-keyboard_arrow_up text-2xl"></span>
+</div>
+<div class="mx-auto my-10 max-w-6xl">
+<div class="mx-3 col-span-3 lg:col-span-2 px-2">
+<h1 class="title text-5xl mb-4">About</h1>
+<div class="content py-1"><p>Coming soon.</p>
 </div>
 </div>
-</header>
-<main class=pb7 role=main>
-<article class="pa3 pa4-ns nested-copy-line-height nested-img">
-<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Coming soon.</p>
-</section>
-<section class="flex-ns flex-wrap justify-around mt5">
-</section></article>
-</main>
-<footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
-<div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://temperate-designs.github.io/>
-&copy; Temperate Designs 2021
+</div>
+</main><footer class=bg-tlgray-100>
+<script src=/js/clipboard.min.js></script>
+<script src=/js/highlight.min.js></script>
+<script src=/js/highlightjs-line-numbers.min.js></script>
+<script src=/js/sweetalert2.min.js></script>
+<script>hljs.initHighlightingOnLoad(),hljs.initLineNumbersOnLoad(),new ClipboardJS('.url');function OnClickURL(){Swal.fire({icon:'success',title:'Copied!',text:'Copied the URL and title.'})}</script>
+<script>function toggleNav(){var a=document.getElementById("hamburgerbtn"),b=document.getElementById("overlay"),c=document.body;a.addEventListener("click",function(){b.classList.toggle("open"),a.classList.toggle("is-open"),c.classList.toggle("scroll-lock")})}toggleNav(),document.querySelector('.scroll-top').addEventListener('click',()=>{document.documentElement.scrollTop=0})</script>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel=stylesheet>
+<div class="flex items-center justify-between flex-wrap bg-gray-800 p-8 text-white">
+<div class="items-center text-xl text-grey-900 mr-6">
+Temperate Designs
+</div>
+<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto" id=mobileMenu>
+<div class="text-lg lg:flex-grow">
+</div>
+<div class=text-lg>
+<a href=/sunflower-dash/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Sunflower Dash
 </a>
-<div>
-<a href=https://github.com/Temperate-Designs target=_blank class="link-transition github link dib z-999 pt3 pt0-l mr1" title="Github link" rel=noopener aria-label="follow on Github——Opens in a new window"><svg height="32" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" width="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
+<a href=/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Temperate Designs
+</a>
 </div>
 </div>
-</footer>
-</body>
+</div>
+<div class="copy pl-8 py-5 bg-tlgray-700 text-white text-md">
+&copy; Temperate Designs 2021 All Rights Reserved.
+</div>
+</footer></body>
 </html>
