--- a/index.html
+++ b/index.html
@@ -1,118 +1,138 @@
-<!doctype html><html lang=en-us>
+<!doctype html><html lang=ja>
 <head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs | Temperate Designs</title>
-<meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simply Designed Apps">
 <meta name=generator content="Hugo 0.88.1">
-<meta name=ROBOTS content="INDEX, FOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K69Z84DP1Y"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-K69Z84DP1Y')</script>
+<meta charset=utf-8>
+<title>Temperate Designs</title>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=icon href=/favicon-32x32.png>
+<link href=/css/fa5.min.css rel=stylesheet type=text/css>
+<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.636d88a6d306f32eeb32b1fd7d56d5e4c4f6c42def1224a8736bbd07eba742a5.css" integrity="sha256-Y22IptMG8y7rMrH9fVbV5MT2xC3vEiSoc2u9B+unQqU=">
+<link rel=stylesheet href=/css/swiper-bundle.min.css>
+<link href=/css/style.min.css rel=stylesheet type=text/css>
+<link rel=stylesheet href=/css/custom.css><meta name=description content="A Hugo Theme for OSSProject, Companies, Organization...">
 <meta property="og:title" content="Temperate Designs">
-<meta property="og:description" content="Simply Designed Apps">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/">
-<meta itemprop=name content="Temperate Designs">
-<meta itemprop=description content="Simply Designed Apps"><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Temperate Designs">
-<meta name=twitter:description content="Simply Designed Apps">
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<meta property="og:url" content="https://temperate-designs.github.io">
+<meta property="og:image" content="red-and-blue-ink-explosion-picjumbo-com-logo.jpg">
+<meta property="og:description" content="A Hugo Theme for OSSProject, Companies, Organization...">
+<meta name=twitter:card content="summary_large_image">
+<meta name=twitter:site content="@username">
+<meta name=twitter:creator content="@username">
 </head>
-<body class="ma0 avenir bg-near-white production">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
-<nav class="pv3 ph3 ph4-ns" role=navigation>
-<div class="flex-l justify-between items-center center">
-<a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-<img src=/temperate-designs-logo.png class="w100 mw5-ns" alt="Temperate Designs">
-</a>
-<div class="flex-l items-center">
-<ul class="pl0 mr3">
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/about/ title="About page">
-About
+<body><header>
+<div id=overlay>
+<ul class="text-center list-none text-white text-3xl">
+<li class=p-2>
+<a href=/products/>
+<span>Products</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/contact/ title="Contact page">
-Contact
+<li class=p-2>
+<a href=/about/>
+<span>About</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
-Sunflower Dash
+<li class=p-2>
+<a href=/contact/>
+<span>Contact</span>
 </a>
 </li>
-<li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/ title="Temperate Designs page">
-Temperate Designs
+<li class=p-2>
+<a href=/sunflower-dash/>
+<span>Sunflower Dash</span>
+</a>
+</li>
+<li class=p-2>
+<a href=/>
+<span>Temperate Designs</span>
 </a>
 </li>
 </ul>
-<a href=https://github.com/Temperate-Designs target=_blank class="link-transition github link dib z-999 pt3 pt0-l mr1" title="Github link" rel=noopener aria-label="follow on Github——Opens in a new window"><svg height="32" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" width="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
+</div>
+<nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
+<div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
+<a href=https://temperate-designs.github.io><img alt="Temperate Designs Logo" class="h-14 mr-3" src=/temperate-designs-logo.png></a>
+</div>
+<div class="block lg:hidden">
+<div id=hamburgerbtn class="flex cursor-pointer items-center w-14 h-10 py-2 rounded mopen">
+<span class=top></span>
+<span class=middle></span>
+<span class=bottom></span>
+</div>
+</div>
+<div class="hidden w-full block flex-grow lg:flex lg:items-center lg:w-auto" id=mobileMenu>
+<div class="text-lg lg:flex-grow">
+</div>
+<div class=text-lg>
+<a href=/products/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Products
+</a>
+<a href=/about/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+About
+</a>
+<a href=/contact/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Contact
+</a>
+<a href=/sunflower-dash/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Sunflower Dash
+</a>
+<a href=/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Temperate Designs
+</a>
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
+</header><div class="scroll-top rounded-full">
+<span class="icon-keyboard_arrow_up text-2xl"></span>
+</div><div class=swiper-container>
+<div class=swiper-wrapper>
+</div>
+<div class=swiper-button-prev></div>
+<div class=swiper-button-next></div>
+</div>
+<div class="mx-auto my-10 max-w-6xl">
+<h2 class="text-4xl ml-2">Blog</h2>
+<a href=https://temperate-designs.github.io/post/my-first-post/><div class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
+<img id=thumb alt="Welcome to our new webpage!" class="w-auto lg:h-44" src=/img/default.jpg>
+<div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 relative pl-4 p-6 justify-between leading-normal max-w-full w-full">
+<div class="text-gray-900 font-bold text-xl mb-2 dark:text-white">Welcome to our new webpage!</div>
+<p class="text-gray-700 text-base pb-5 dark:text-gray-300">We are pleased to share our new webpage with a completely new look!
+Watch for new articles in the coming weeks!...</p>
+<p class="text-sm text-gray-600 items-center dark:text-gray-400">
+<time>2021/10/18</time>
+</p>
+</div>
+</div></a>
+<div class="flex flex-wrap justify-center text-gray-300 my-5">
+<a href=blog/ class="duration-200 px-6 py-3 bg-tlgray-800 hover:opacity-80 hover:text-white relative block focus:outline-none text-md text-center">
+All Posts >
+</a>
+</div></div><footer class=bg-tlgray-100>
+<script>function toggleNav(){var a=document.getElementById("hamburgerbtn"),b=document.getElementById("overlay"),c=document.body;a.addEventListener("click",function(){b.classList.toggle("open"),a.classList.toggle("is-open"),c.classList.toggle("scroll-lock")})}toggleNav(),document.querySelector('.scroll-top').addEventListener('click',()=>{document.documentElement.scrollTop=0})</script>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel=stylesheet>
+<div class="flex items-center justify-between flex-wrap bg-gray-800 p-8 text-white">
+<div class="items-center text-xl text-grey-900 mr-6">
 Temperate Designs
-</h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
-Simply Designed Apps
-</h2>
 </div>
+<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto" id=mobileMenu>
+<div class="text-lg lg:flex-grow">
 </div>
-</header>
-<main class=pb7 role=main>
-<article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-<p>Our apps are published in the <a href="https://play.google.com/store/apps/dev?id=5570979445892256716">Google Play
-Store</a>.
-Go check them out!</p>
-</article>
-<div class="pa3 pa4-ns w-100 w-70-ns center">
-<h1 class=flex-none>
-Recent Posts
-</h1>
-<section class="w-100 mw8">
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/post/my-first-post/ class="color-inherit dim link">
-Welcome to our new webpage!
+<div class=text-lg>
+<a href=/sunflower-dash/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Sunflower Dash
 </a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-We are pleased to share our new webpage with a completely new look!
-Watch for new articles in the coming weeks!
-</div>
-<a href=/post/my-first-post/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-</section>
-</div>
-</main>
-<footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
-<div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://temperate-designs.github.io/>
-&copy; Temperate Designs 2021
+<a href=/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Temperate Designs
 </a>
-<div>
-<a href=https://github.com/Temperate-Designs target=_blank class="link-transition github link dib z-999 pt3 pt0-l mr1" title="Github link" rel=noopener aria-label="follow on Github——Opens in a new window"><svg height="32" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" width="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
-<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" width="8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
-</span></a>
 </div>
 </div>
-</footer>
+</div>
+<div class="copy pl-8 py-5 bg-tlgray-700 text-white text-md">
+&copy; Temperate Designs 2021 All Rights Reserved.
+</div>
+</footer><script src=/js/swiper-bundle.min.js></script>
+<script>var mySwiper=new Swiper(".swiper-container",{direction:"horizontal",loop:!0,speed:550,autoplay:{delay:6e3},pagination:{el:".swiper-pagination"},navigation:{nextEl:".swiper-button-next",prevEl:".swiper-button-prev"}})</script>
 </body>
 </html>
