--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,7 +3,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-K69Z84DP1Y"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-K69Z84DP1Y')</script>
 <meta charset=utf-8>
-<title>Temperate Designs | About</title>
+<title>Temperate Designs | Privacy</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=/favicon-32x32.png>
 <link href=/css/fa5.min.css rel=stylesheet type=text/css>
@@ -11,12 +11,12 @@
 <link href=/css/style.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=/css/custom.css>
 <meta property="og:site_name" content="Temperate Designs">
-<meta property="og:title" content="About | Temperate Designs">
+<meta property="og:title" content="Privacy | Temperate Designs">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/about/">
+<meta property="og:url" content="https://temperate-designs.github.io/privacy/">
 <meta property="og:locale" content="ja_JP">
 <meta name=twitter:card content="summary_large_image">
-<meta property="twitter:title" content="About">
+<meta property="twitter:title" content="Privacy">
 <meta property="og:image" content="https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg">
 <meta property="og:image:url" content="https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg">
 <meta property="og:description" content="Simply Designed Apps">
@@ -99,8 +99,13 @@ Temperate Designs
 </div>
 <div class="mx-auto my-10 max-w-6xl">
 <div class="mx-3 col-span-3 lg:col-span-2 px-2">
-<h1 class="title text-5xl mb-4">About</h1>
-<div class="content py-1"><p>Coming soon.</p>
+<h1 class="title text-5xl mb-4">Privacy</h1>
+<div class="content py-1"><h2 id=information-collected>Information Collected</h2>
+<p>We do not collect any information in our apps.</p>
+<h2 id=contact-information>Contact Information</h2>
+<p>In case you have any questions or concerns regarding your data in our apps you
+can contact us at</p>
+<p><a href=mailto:temperatedesigns2@gmail.com>temperatedesigns2@gmail.com</a></p>
 </div>
 </div>
 </div>
