--- a/products/index.html
+++ b/products/index.html
@@ -31,6 +31,11 @@
 </a>
 </li>
 <li class=p-2>
+<a href=/privacy/>
+<span>Privacy</span>
+</a>
+</li>
+<li class=p-2>
 <a href=/sunflower-dash/>
 <span>Sunflower Dash</span>
 </a>
@@ -65,6 +70,9 @@ About
 </a>
 <a href=/contact/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
 Contact
+</a>
+<a href=/privacy/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Privacy
 </a>
 <a href=/sunflower-dash/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
 Sunflower Dash
