--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name=generator content="Hugo 0.88.1">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-K69Z84DP1Y"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-K69Z84DP1Y')</script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-4328959315579213" crossorigin=anonymous></script>
 <meta charset=utf-8>
 <title>Temperate Designs</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
