--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=/favicon-32x32.png>
 <link href=/css/fa5.min.css rel=stylesheet type=text/css>
-<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.636d88a6d306f32eeb32b1fd7d56d5e4c4f6c42def1224a8736bbd07eba742a5.css" integrity="sha256-Y22IptMG8y7rMrH9fVbV5MT2xC3vEiSoc2u9B+unQqU=">
+<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.1a63551bca201fc5608c314eb803e3de354cbc257aa2cc3b9aa06e43d4e7fe40.css" integrity="sha256-GmNVG8ogH8VgjDFOuAPj3jVMvCV6osw7mqBuQ9Tn/kA=">
 <link rel=stylesheet href=/css/swiper-bundle.min.css>
 <link href=/css/style.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=/css/custom.css><meta name=description content="A Hugo Theme for OSSProject, Companies, Organization...">
@@ -103,7 +103,7 @@ Temperate Designs
 </div>
 <div class="mx-auto my-10 max-w-6xl">
 <h2 class="text-4xl ml-2">Blog</h2>
-<a href=https://temperate-designs.github.io/post/my-first-post/><div class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
+<a href=https://temperate-designs.github.io/blog/my-first-post/><div class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
 <img id=thumb alt="Welcome to our new webpage!" class="w-auto lg:h-44" src=/img/default.jpg>
 <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 relative pl-4 p-6 justify-between leading-normal max-w-full w-full">
 <div class="text-gray-900 font-bold text-xl mb-2 dark:text-white">Welcome to our new webpage!</div>
