--- a/products/index.html
+++ b/products/index.html
@@ -93,8 +93,9 @@ Go check them out!</p>
 <figure><a href="https://play.google.com/store/apps/details?id=com.temperatedesigns.swn_race_timer&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target=_blank><img src=https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png alt="Get it on Google Play" width=200></a>
 </figure>
 <h2 id=sunflower-dash>Sunflower Dash</h2>
-<p>Sunflower Dash is a fun game (still under active development)</p>
-<p>(not yet available)</p>
+<p>Sunflower Dash is a fun game with lots of sunflowers. The game is not yet
+available but you are welcome to join the
+<a href=https://github.com/Temperate-Designs/sunflower-dash>development</a>.</p>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 mb-2 gap-2">
 </div>
